working on a player bar chart

--- a/kevin.ipynb
+++ b/kevin.ipynb
@@ -7,22 +7,41 @@
     "# NBA Prediction Models\n",
     "## Kevin Yang, Eric Lee, Derek Young\n",
     "\n",
-    "Our main goal is to build prediction models for NBA team performance. As a first step, we will scrape data from `stats.nba.com` and store relevant data in a local sqllite database.\n",
+    "Our main goal is to build prediction models for NBA team performance. As a first step, we will scrape data from `stats.nba.com` and store relevant data in a local `sqlite` database.\n",
     "\n",
-    "First, we will test our scraping functionality on a simple player example."
+    "On a broad level, we have decided to focus our project on predicting the outcome of a given nba game. On a high level, our approach will involve determining the most important features in determining game outcomes, and then training a supervised machine learning model on these features over many previous games. There should be certain nuances that we should be careful to account for when modeling nba games. One of these is injuries. We need to find some way of determining the effect that an injured player will have on the result of a game.\n",
+    "\n",
+    "In this deliverable, we will focus on data collection and understanding the data. We have provided snippets of code to demonstrate some of the work we have done. \n",
+    "\n",
+    "We will first write a simple scraping function to get player game logs."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kevinyang/anaconda/lib/python2.7/site-packages/matplotlib/__init__.py:1350: UserWarning:  This call to matplotlib.use() has no effect\n",
+      "because the backend has already been chosen;\n",
+      "matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "  warnings.warn(_use_error_msg)\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import sqlite3\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import time\n",
     "\n",
     "# Use svg backend for better quality\n",
     "import matplotlib\n",
@@ -35,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -44,8 +63,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "header [u'SEASON_ID', u'Player_ID', u'Game_ID', u'GAME_DATE', u'MATCHUP', u'WL', u'MIN', u'FGM', u'FGA', u'FG_PCT', u'FG3M', u'FG3A', u'FG3_PCT', u'FTM', u'FTA', u'FT_PCT', u'OREB', u'DREB', u'REB', u'AST', u'STL', u'BLK', u'TOV', u'PF', u'PTS', u'PLUS_MINUS', u'VIDEO_AVAILABLE']\n",
-      "player gamelogs [[u'22016', 202391, u'0021600057', u'NOV 02, 2016', u'BKN vs. DET', u'W', 16, 4, 6, 0.667, 0, 1, 0.0, 2, 2, 1.0, 0, 2, 2, 4, 0, 0, 1, 0, 10, 8, 1], [u'22016', 202391, u'0021600043', u'OCT 31, 2016', u'BKN vs. CHI', u'L', 24, 6, 10, 0.6, 1, 2, 0.5, 1, 2, 0.5, 0, 2, 2, 4, 4, 0, 3, 0, 14, -15, 1], [u'22016', 202391, u'0021600031', u'OCT 29, 2016', u'BKN @ MIL', u'L', 33, 4, 16, 0.25, 1, 7, 0.143, 3, 5, 0.6, 1, 2, 3, 11, 3, 1, 4, 0, 12, 12, 2], [u'22016', 202391, u'0021600019', u'OCT 28, 2016', u'BKN vs. IND', u'W', 34, 6, 12, 0.5, 2, 4, 0.5, 7, 8, 0.875, 0, 9, 9, 9, 0, 1, 2, 1, 21, 0, 2], [u'22016', 202391, u'0021600006', u'OCT 26, 2016', u'BKN @ BOS', u'L', 28, 6, 14, 0.429, 2, 5, 0.4, 4, 5, 0.8, 1, 2, 3, 3, 0, 1, 2, 1, 18, -3, 2]]\n"
+      "  SEASON_ID Player_ID     Game_ID     GAME_DATE      MATCHUP WL MIN FGM FGA  \\\n",
+      "1     22016    202391  0021600057  NOV 02, 2016  BKN vs. DET  W  16   4   6   \n",
+      "2     22016    202391  0021600043  OCT 31, 2016  BKN vs. CHI  L  24   6  10   \n",
+      "3     22016    202391  0021600031  OCT 29, 2016    BKN @ MIL  L  33   4  16   \n",
+      "4     22016    202391  0021600019  OCT 28, 2016  BKN vs. IND  W  34   6  12   \n",
+      "5     22016    202391  0021600006  OCT 26, 2016    BKN @ BOS  L  28   6  14   \n",
+      "\n",
+      "  FG_PCT       ...       DREB REB AST STL BLK TOV PF PTS PLUS_MINUS  \\\n",
+      "1  0.667       ...          2   2   4   0   0   1  0  10          8   \n",
+      "2    0.6       ...          2   2   4   4   0   3  0  14        -15   \n",
+      "3   0.25       ...          2   3  11   3   1   4  0  12         12   \n",
+      "4    0.5       ...          9   9   9   0   1   2  1  21          0   \n",
+      "5  0.429       ...          2   3   3   0   1   2  1  18         -3   \n",
+      "\n",
+      "  VIDEO_AVAILABLE  \n",
+      "1               1  \n",
+      "2               1  \n",
+      "3               2  \n",
+      "4               2  \n",
+      "5               2  \n",
+      "\n",
+      "[5 rows x 27 columns]\n"
      ]
     }
    ],
@@ -63,6 +102,7 @@
     "    player_url = (\"http://stats.nba.com/stats/playergamelog?DateFrom=&DateTo=&LeagueID=00&PlayerID=\" \n",
     "                  + str(player_id) + \"&Season=\" + season + \"&SeasonType=Regular+Season\")\n",
     "    headers = {'User-Agent': 'Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:39.0) Gecko/20100101 Firefox/39.0'}\n",
+    "    \n",
     "    # request the URL and parse the JSON\n",
     "    response = requests.get(player_url, headers = headers)\n",
     "    response.raise_for_status() # raise exception if invalid response\n",
@@ -72,14 +112,96 @@
     "    \n",
     "    return (header, log_list)\n",
     "\n",
+    "def convert_to_dataframe(header, log_list):\n",
+    "    \"\"\" Given a header and a log_list, where header is a key describing the format of a log in log list and log_list\n",
+    "    contains a list of game logs, convert_to_dataframe returns this data in dataframe form\n",
+    "    Input:\n",
+    "        header (list): list of column labels\n",
+    "        log_list (list): 2D list containing game logs \n",
+    "    Output:\n",
+    "        (pd.DataFrame): DataFrame containig the given data\n",
+    "    \"\"\"\n",
+    "    index = np.arange(1, len(log_list) + 1)\n",
+    "    df = pd.DataFrame(index = index, columns = header)\n",
+    "    \n",
+    "    logs = np.array(log_list)\n",
+    "    logs_transpose = logs.T\n",
+    "    \n",
+    "    for i in xrange(len(header)):\n",
+    "        curr_header = header[i]\n",
+    "        df[curr_header] = logs_transpose[i]\n",
+    "    \n",
+    "    return df\n",
+    "    \n",
     "# jeremy lin\n",
     "player_id = 202391\n",
     "season = \"2016-17\"\n",
     "\n",
-    "(header, plog_list) = get_player_gamelogs(player_id, season)  \n",
+    "(header, plog_list) = get_player_gamelogs(player_id, season) \n",
     "\n",
-    "print \"header\", header\n",
-    "print \"player gamelogs\", plog_list"
+    "player_df = convert_to_dataframe(header, plog_list)\n",
+    "\n",
+    "print player_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have a function that extracts player game logs, we might be interested in understanding the importance of thhese player statistics as a predictor for team wins or losses. We can create some bar charts comparing player statistics in wins or losses. \n",
+    "\n",
+    "Additionally, instead of treating wins and losses as binary variables, we can also consider the relationship between player statistics and the point differential in any given game."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def display_player_wl(player_id, season):\n",
+    "    \"\"\" Given a player id (int or string) and a season (string, ex: 2016-17), displays graphs comparing the players\n",
+    "    performance in wins and losses\n",
+    "    Input:\n",
+    "        player_id (int or string): player ID number\n",
+    "        season (str): season string, ex: 2016-17\n",
+    "    Output:\n",
+    "        (header, log_list): header is a key describing the format of a log in log list\n",
+    "    \"\"\"\n",
+    "    rows, cols = 4, 4\n",
+    "    \n",
+    "    f, axarr = plt.subplots(rows, cols)\n",
+    "    \n",
+    "    (headers, log_list) = get_player_gamelogs(player_id, season)\n",
+    "    \n",
+    "    df = convert_to_df(headers, log_list)\n",
+    "    \n",
+    "    # get rows corresponding to wins\n",
+    "    df_w = df[df['WL'] == 'W']\n",
+    "    df_l = df[df['WL'] == 'L']\n",
+    "    \n",
+    "    # get numerical columns\n",
+    "    w_num = df_w.loc[:,['MIN','FGM','FGA','FG_PCT','FG3M','FG3A','FG3_PCT','FTM','FTA','FT_PCT','OREB','DREB','REB',\n",
+    "                  'AST','STL','BLK','TOV','PF','PTS','PLUS_MINUS']]\n",
+    "    l_num = df_l.loc[:,['MIN','FGM','FGA','FG_PCT','FG3M','FG3A','FG3_PCT','FTM','FTA','FT_PCT','OREB','DREB','REB',\n",
+    "                  'AST','STL','BLK','TOV','PF','PTS','PLUS_MINUS']]\n",
+    "    \n",
+    "    w_mean = w_num.mean(axis = 0)\n",
+    "    l_mean = l_num.mean(axis = 0)\n",
+    "    \n",
+    "    for i in xrange(rows):\n",
+    "        for j in xrange(cols):\n",
+    "            # get image from X\n",
+    "\n",
+    "            # convert imageRow to 2d array\n",
+    "            col_count = math.sqrt(len(imageRow))\n",
+    "\n",
+    "            imageMatrix = np.reshape(imageRow, (-1, col_count))\n",
+    "\n",
+    "            image_obj = axarr[i,j].imshow(imageMatrix, cmap = \"gray\")\n",
+    "            axarr[i,j].axis(\"off\")"
    ]
   },
   {
@@ -118,21 +240,6 @@
     "    header = response_json['resultSets'][0]['headers']\n",
     "    \n",
     "    return (header, log_list)\n",
-    "\n",
-    "\n",
-    "# def check_table_exists(conn, table_name):\n",
-    "#     \"\"\" Check if a table table_name exists in the SQLite database given in conn\n",
-    "#     Input:\n",
-    "#         conn (sqlite3.Connection) : Connection object corresponding to the database; used to perform SQL commands.\n",
-    "#         table_name (string): Name of table to check\n",
-    "#     Output:\n",
-    "#         bool: Whether or not the table table_name exists in conn\n",
-    "#     \"\"\"\n",
-    "    \n",
-    "#     cursor = conn.cursor()\n",
-    "#     query = \"SELECT count(*) FROM sqlite_master WHERE type='table' AND name= + '\" + table_name + \"'\"\n",
-    "    \n",
-    "#     cursor.execute(query)\n",
     "\n",
     "def generate_year_list(start, yrs):\n",
     "    \"\"\" Load nba gamelog data for the past yrs years as a games tables into an SQLite database given in conn\n",
