Added db of games not played

--- a/Eric's Notebook.ipynb
+++ b/Eric's Notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test"
+    "A key component in determining if a certain team will win are the players that "
    ]
   }
  ],
