--- a/Midterm_Report.ipynb
+++ b/Midterm_Report.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -67,8 +67,8 @@
       "  VIDEO_AVAILABLE  \n",
       "1               1  \n",
       "2               1  \n",
-      "3               2  \n",
-      "4               2  \n",
+      "3               1  \n",
+      "4               1  \n",
       "5               2  \n",
       "\n",
       "[5 rows x 27 columns]\n"
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -285,14 +285,20 @@
     "    return (header, log_list)\n",
     "\n",
     "def generate_year_list(start, yrs):\n",
-    "    \"\"\" Load nba gamelog data for the past yrs years as a games tables into an SQLite database given in conn\n",
+    "    \"\"\" Generate a year list to pass into load_all_gamlogs\n",
     "    Input:\n",
-    "        conn (sqlite3.Connection) : Connection object corresponding to the database; used to perform SQL commands.\n",
-    "        yrs (int): Number of years to include in table\n",
+    "        start (int): The first year we are interested in loading\n",
+    "        yrs (int): How many years since start that we are including\n",
     "    Output:\n",
-    "        None\n",
+    "        (List): List of years\n",
     "    \"\"\"\n",
-    "    pass\n",
+    "    year_list = []\n",
+    "    curr_yr = start\n",
+    "    for i in xrange(yrs):\n",
+    "        nextyr = curr_yr + 1 \n",
+    "        year_list.append(str(curr_yr)+\"-\"+str(nextyr)[2:])\n",
+    "        curr_yr = nextyr\n",
+    "    return year_list\n",
     "    \n",
     "def load_all_gamelogs(conn, yrs):\n",
     "    \"\"\" Load nba gamelog data for the past yrs years as a games tables into an SQLite database given in conn\n",
@@ -305,8 +311,7 @@
     "    \n",
     "    cursor = conn.cursor()\n",
     "    \n",
-    "    # hardcode for now\n",
-    "    year_list = ['2010-11', '2011-12', '2012-13', '2013-14', '2015-16', '2016-17']\n",
+    "    year_list = generate_year_list(2010,6) #['2010-11', '2011-12', '2012-13', '2013-14', '2015-16', '2016-17']\n",
     "    \n",
     "    # clear league_log table\n",
     "    cursor.execute('drop table if exists league_log')\n",
@@ -361,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -374,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -561,14 +566,15 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "league_df = pd.read_sql_query('SELECT * FROM league_log', conn)\n",
-    "league_df.head()"
+    "league_df.head()\n",
+    "#print len(league_df)"
    ]
   },
   {
