added home and away win pct columns

--- a/Midterm_Report.ipynb
+++ b/Midterm_Report.ipynb
@@ -342,8 +342,8 @@
     "# TEST SET WILL BE SEASON 2015-16 + 2016-17??\n",
     "# WHAT SHOULD TRAINING SET AND VALIDATION SET BE?\n",
     "\n",
-    "print generate_year_list(start_year,length)\n",
-    "load_all_gamelogs(conn, start_year, length )"
+    "#print generate_year_list(start_year,length)\n",
+    "#load_all_gamelogs(conn, start_year, length )"
    ]
   },
   {
@@ -561,12 +561,24 @@
     "        # total plus minus so far\n",
     "        plus_minus_dict = dict()\n",
     "        \n",
+    "        # stores home and away game counts and w/l counts\n",
+    "        wins_as_home = dict()\n",
+    "        wins_as_away = dict()\n",
+    "        games_as_home = dict()\n",
+    "        games_as_away = dict()\n",
+    "        \n",
     "        for team in season_df['team_id'].unique():\n",
     "            win_dict[team] = 0\n",
     "            lose_dict[team] = 0\n",
     "            running_dict[team] = []\n",
     "            plus_minus_dict[team] = 0\n",
     "            running_date_dict[team] = []\n",
+    "            \n",
+    "            # track wins at home, at away, and total games at home, at away\n",
+    "            wins_as_home[team] = 0\n",
+    "            wins_as_away[team] = 0\n",
+    "            games_as_home[team] = 0\n",
+    "            games_as_away[team] = 0\n",
     "        \n",
     "        # sort season by day\n",
     "        season_df = season_df.sort_values('game_date')\n",
@@ -663,7 +675,22 @@
     "                    \n",
     "            new_df.set_value(index, 'home_back_to_back', home_back_to_back)\n",
     "            new_df.set_value(index, 'away_back_to_back', away_back_to_back)\n",
-    "                    \n",
+    "            \n",
+    "            #update home_win_pct_as_home, away_win_pct_as_away\n",
+    "            home_win_pct_as_home = 0\n",
+    "            away_win_pct_as_away = 0\n",
+    "            \n",
+    "            home_games_as_home = games_as_home[home_team_id]\n",
+    "            away_games_as_away = games_as_away[away_team_id]\n",
+    "            \n",
+    "            if (home_games_as_home > 0):\n",
+    "                home_win_pct_as_home = (wins_as_home[home_team_id])/float(home_games_as_home)\n",
+    "            if (away_games_as_away > 0):\n",
+    "                away_win_pct_as_away = (wins_as_away[away_team_id])/float(away_games_as_away)\n",
+    "                \n",
+    "            new_df.set_value(index, 'home_win_pct_as_home', home_win_pct_as_home)\n",
+    "            new_df.set_value(index, 'away_win_pct_as_away', away_win_pct_as_away)\n",
+    "            \n",
     "            # update running stats\n",
     "            if (wl == 'W'):\n",
     "                if game_id in seen_games:\n",
@@ -672,12 +699,33 @@
     "                    running_dict[team_id].append(1)\n",
     "                    running_dict[opp_team_id].append(0)\n",
     "                    \n",
+    "                    # update home team and away team w/l\n",
+    "                    if is_home == 1:\n",
+    "                        wins_as_home[team_id] += 1\n",
+    "                        games_as_home[team_id] += 1\n",
+    "                        games_as_away[opp_team_id] += 1\n",
+    "                    else:\n",
+    "                        wins_as_away[team_id] += 1\n",
+    "                        games_as_away[team_id] += 1\n",
+    "                        games_as_home[opp_team_id] += 1\n",
+    "                    \n",
     "            else:\n",
     "                if game_id in seen_games:\n",
     "                    win_dict[opp_team_id] += 1\n",
     "                    lose_dict[team_id] += 1\n",
     "                    running_dict[opp_team_id].append(1)\n",
     "                    running_dict[team_id].append(0)\n",
+    "                    \n",
+    "                    # update home team and away team w/l\n",
+    "                    if is_home == 1:\n",
+    "                        wins_as_away[opp_team_id] += 1\n",
+    "                        games_as_away[opp_team_id] += 1\n",
+    "                        games_as_home[team_id] += 1\n",
+    "                        \n",
+    "                    else:\n",
+    "                        wins_as_home[opp_team_id] += 1\n",
+    "                        games_as_home[opp_team_id] += 1\n",
+    "                        games_as_away[team_id] += 1\n",
     "            if game_id in seen_games:\n",
     "                plus_minus_dict[team_id] += curr_team_plus_minus\n",
     "                plus_minus_dict[opp_team_id] += opp_team_plus_minus\n",
@@ -700,8 +748,8 @@
     "new_df = add_extra_features(league_df)\n",
     "home_games = new_df[new_df['is_home'] == 1]\n",
     "home_games_with_cutoff = home_games[home_games['home_game_count'] >= cutoff]\n",
-    "home_games_with_cutoff.head(10)\n",
-    "\n",
+    "home_games_with_cutoff.head(20)\n",
+    "#print home_games_with_cutoff[\"home_win_pct_as_home\"]\n",
     "#pd.DataFrame.to_csv(home_games_with_cutoff, 'home_games_with_cutoff.csv')\n"
    ]
   },
