added normalization function

--- a/Midterm_Report.ipynb
+++ b/Midterm_Report.ipynb
@@ -29,7 +29,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
-    "from datetime import datetime \n",
+    "from datetime import datetime\n",
+    "from sklearn.svm import LinearSVC, SVC\n",
     "\n",
     "# Use svg backend for better quality\n",
     "import matplotlib\n",
@@ -745,7 +746,7 @@
    },
    "outputs": [],
    "source": [
-    "cutoff = 0\n",
+    "cutoff = 10\n",
     "new_df = add_extra_features(league_df)\n",
     "# all games contains away games and home games, without any cutoff\n",
     "all_games = new_df\n",
@@ -1332,6 +1333,14 @@
     "print naive_approach_accuracy(home_games,[\"22010\",\"22011\",\"22012\"])\n",
     "    \n",
     "def graph_naive(home_games_df):\n",
+    "    \"\"\" Given a df containing ALL HOME game logs, \n",
+    "        graph_naive graphs the naive classification accuracy across seasons\n",
+    "    Input:\n",
+    "        home_games_df (pandas.DataFrame): dataframe containing post-processed \n",
+    "            league logs (HOME)\n",
+    "    Output:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    season_list = home_games_df['season_id'].unique().tolist()\n",
     "    seasons = []\n",
     "    naives = []\n",
@@ -1350,7 +1359,71 @@
     "                  np.poly1d(np.polyfit(seasons, naives, 1))(np.unique(seasons)))\n",
     "\n",
     "graph_naive(home_games)\n",
+    "\n",
+    "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Normalization\n",
+    "We wish to normalize our data for cleaner modeling, and to help SVM converge faster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# home games\n",
+    "# divide into training set, validation set, test set\n",
+    "training_set = home_games_with_cutoff[(home_games_with_cutoff['season_id'] >= \"22005\") &\n",
+    "                                     (home_games_with_cutoff['season_id'] <= \"22009\")]\n",
+    "validation_set = home_games[(home_games['season_id'] >= \"22010\") & \n",
+    "                            (home_games['season_id'] <= \"22012\")]\n",
+    "test_set = home_games[(home_games['season_id'] >= \"22013\") & \n",
+    "                      (home_games['season_id'] <= \"22016\")]\n",
+    "\n",
+    "def normalize(df, param_labels, soft=True):\n",
+    "    \"\"\" Given a df containing game logs to be normalized, returns a new normalized dataframe\n",
+    "    Input:\n",
+    "        df (pandas.DataFrame): dataframe containing post-processed league logs\n",
+    "        list (str): list of column labels to normalize\n",
+    "        soft (bool): whether to do soft normalization or hard normalization\n",
+    "    Output:\n",
+    "        pd.DataFrame\n",
+    "    \"\"\"\n",
+    "    # soft normalization\n",
+    "    if (soft):\n",
+    "        for label in param_labels:\n",
+    "            mean = np.mean(df[label])\n",
+    "            std = (df[label]).std()\n",
+    "            \n",
+    "            new_row = df[label].apply(lambda x: (x-mean)/(2*std))\n",
+    "    \n",
+    "            df.loc[:,label] = new_row \n",
+    "    # hard normalization\n",
+    "    else:\n",
+    "        pass\n",
+    "    return df\n",
+    "\n",
+    "# RUN THIS IF YOU WANT NORMALIZED STUFF\n",
+    "training_set = normalize(training_set, ['home_avg_pt_diff','away_avg_pt_diff'])\n",
+    "validation_set = normalize(validation_set, ['home_avg_pt_diff','away_avg_pt_diff'])\n",
+    "test_set = normalize(validation_set, ['home_avg_pt_diff','away_avg_pt_diff'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SVM\n",
+    "In addition to Linear and Logistic Regression, we wish to try support vector machines for classification of win-loss"
    ]
   },
   {
