--- a/Midterm_Report.ipynb
+++ b/Midterm_Report.ipynb
@@ -1358,10 +1358,7 @@
     "    plt.plot(seasons, naives, seasons, \n",
     "                  np.poly1d(np.polyfit(seasons, naives, 1))(np.unique(seasons)))\n",
     "\n",
-    "graph_naive(home_games)\n",
-    "\n",
-    "\n",
-    "    "
+    "graph_naive(home_games)"
    ]
   },
   {
@@ -1430,10 +1427,120 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def create_feature_matrix(df, features):\n",
+    "    \"\"\" Given a normalized df, returns a matrix of features and the binary w/l response\n",
+    "    Input:\n",
+    "        df (pandas.DataFrame): dataframe containing post-processed, normalzied league logs\n",
+    "        list (str): list of features to be included\n",
+    "    Output:\n",
+    "        (array-like, array-like)\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return (df[features].values, df['wl_binary'].values)\n",
+    "\n",
+    "# modify this as see fit\n",
+    "features = ['home_win_pct', 'away_win_pct',\n",
+    "           'home_win_pct_N', 'away_win_pct_N','away_win_pct_as_away',\n",
+    "            'home_win_pct_as_home', 'home_back_to_back','away_back_to_back']\n",
+    "\n",
+    "training_matrix, training_response = create_feature_matrix(training_set, features)\n",
+    "validation_matrix, validation_response = create_feature_matrix(validation_set, features)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Run SVM\n",
+    "clf = SVC(C=1e4, kernel='linear')\n",
+    "clf.fit(training_matrix, training_response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "valid_pred = clf.predict(validation_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_svm_accuracy(pred, actuals):\n",
+    "    \"\"\" Given predictions and actuals, calculates prediction accuracy\n",
+    "    Input:\n",
+    "        pred (array-like): list of predictions\n",
+    "        actuals (array-like): list of actual outputs\n",
+    "    Output:\n",
+    "        float\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    assert(len(pred) == len(actuals))\n",
+    "    \n",
+    "    correct = 0\n",
+    "    total = 0\n",
+    "    \n",
+    "    for i in xrange(len(pred)):\n",
+    "        if pred[i] == actuals[i]:\n",
+    "            correct += 1\n",
+    "        total += 1\n",
+    "        \n",
+    "    return correct/float(total)\n",
+    "\n",
+    "print get_svm_accuracy(valid_pred, validation_response)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# random code to count number of back to back wins\n",
+    "print len(home_games[(home_games['team_id'] == 1610612742) &(home_games['wl_binary'] == 1)\n",
+    "         & (home_games['season_id'] == \"22015\") & (home_games['home_back_to_back'] == 1)])\n",
+    "\n",
+    "print len(home_games[(home_games['opp_team_id'] == 1610612742) &(home_games['wl_binary'] == 0)\n",
+    "         & (home_games['season_id'] == \"22015\") & (home_games['away_back_to_back'] == 1)])\n",
+    "\n",
+    "print len(home_games[(home_games['team_id'] == 1610612742)\n",
+    "         & (home_games['season_id'] == \"22015\") & (home_games['home_back_to_back'] == 1)])\n",
+    "\n",
+    "print len(home_games[(home_games['opp_team_id'] == 1610612742)\n",
+    "         & (home_games['season_id'] == \"22015\") & (home_games['away_back_to_back'] == 1)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def validate_SVC(C=1e4, gamma='auto'):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
