--- a/Midterm_Report.ipynb
+++ b/Midterm_Report.ipynb
@@ -1218,8 +1218,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Is back to back significant?\n",
-    "We want to examine whether or not playing back to back games has a significant effect of lowering the chances that any given team will lose the next game. For each team, we look at their win loss percentages of back to back games compared to non back to back games across several seasons, and run a hypothesis test to see if the true mean difference in win loss percentage for regular games and back to back games is non-zero. We run this hypothesis test at an alpha level of 0.05. In the end, we look to see whether this was a significant effect for many teams in the league or just a few of them. "
+    "# Hypothesis Testing: Is back to back significant?\n",
+    "We want to examine whether or not playing back to back games has a significant effect of lowering the chances that any given team will lose the next game. For each team, we look at their win loss percentages of back to back games compared to non back to back games across several seasons, and run a hypothesis test to see if the true mean difference in win loss percentage for regular games and back to back games is non-zero. We run this hypothesis test at an alpha level of 0.05. We look to see whether this was a significant effect for many teams in the league or just a few of them. \n",
+    "\n",
+    "Null Hypothesis: \n",
+    "The true difference in win loss records between regular games and back to back games is zero.\n",
+    "\n",
+    "Alternative: \n",
+    "The win loss record of regular games is higher than that of the win loss record of back to back games"
    ]
   },
   {
@@ -1232,6 +1238,8 @@
    "source": [
     "import scipy.stats as st\n",
     "from scipy.stats import t\n",
+    "from scipy.stats import norm\n",
+    "\n",
     "def teamPercentages(teamID, game_log):\n",
     "    \"\"\" Given a team id (int or string) returns a (list, list) representing win loss percentages for back to back \n",
     "        and regular games\n",
@@ -1239,24 +1247,23 @@
     "        teamID (int): team_id number\n",
     "        game_log (pd.DataFrame): Game_log - Needs all games (not just home games) listed\n",
     "    Output:\n",
-    "        (list, list): a tuple of lists where the first represents the win loss percentage for non back to back games\n",
-    "                      and the second represents the win loss percentage for back to back games, where each point in \n",
-    "                      each list represents one season for this team\n",
+    "        (list, list): a tuple of lists where each list contains the number of wins and number of games played for a \n",
+    "                      given category, where the first list represents back to back games and the second list \n",
+    "                      represents regular games.\n",
     "    \"\"\"\n",
     "    seasons = game_log[\"season_id\"].unique()\n",
-    "    #seasons = [\"22015\"]\n",
     "    # Initialize lists which store the percentages for back to back games and regular games for each season\n",
     "    bbList = []\n",
     "    regList = []\n",
+    "    # Initialize counters for games \n",
+    "    bbWins = 0 \n",
+    "    bbGames = 0\n",
+    "    regWins = 0\n",
+    "    regGames = 0\n",
     "    # Iterate through all seasons of the dataframe \n",
     "    for season in seasons:\n",
     "        # Get dataframe that only contains games from this season of the team of interest\n",
     "        currDf = game_log[(game_log[\"season_id\"] == season) & ((game_log[\"team_id\"] == teamID) | (game_log[\"opp_team_id\"] == teamID))]\n",
-    "        # Initialize counters for games \n",
-    "        bbWins = 0 \n",
-    "        bbGames = 0\n",
-    "        regWins = 0\n",
-    "        regGames = 0\n",
     "        # Iterate over the dataframe\n",
     "        for (index, row) in currDf.iterrows():\n",
     "            # Determine whether this is a home or away game\n",
@@ -1281,19 +1288,14 @@
     "                    regWins += 1\n",
     "                elif (home == False and row[\"wl_binary\"] == 0):\n",
     "                    regWins += 1\n",
-    "        # Calculate the back to back and regular win loss percentages and add it to the lists \n",
-    "        if bbGames == 0:\n",
-    "            bbList.append(0)\n",
-    "        else:\n",
-    "            bbList.append(((bbWins)/float(bbGames)))\n",
-    "        if regGames == 0:\n",
-    "            regList.append(0)\n",
-    "        else:\n",
-    "            regList.append(((regWins)/float(regGames)))\n",
+    "    # Add the num of won and total games in the respective lists \n",
+    "    bbList.append(bbWins)\n",
+    "    bbList.append(bbGames)\n",
+    "    regList.append(regWins)\n",
+    "    regList.append(regGames)\n",
     "    return (bbList, regList)\n",
     "\n",
-    "#teamPercentages(1610612742, home_games)\n",
-    "\n",
+    "#print teamPercentages(1610612742, home_games)\n",
     "\n",
     "def leaguePercentages(game_log, season_id):\n",
     "    \"\"\" For all teams in the league, generate their win loss percentages for back to back and regular games \n",
@@ -1303,8 +1305,9 @@
     "        season_id (string): season id in which we only look at the results occuring at or after this season \n",
     "    Output:\n",
     "        returnDict: (string, (List, List)) where key represents the team name and value is the tuple of \n",
-    "                                           win loss percentages for win loss percentages of back to back and \n",
-    "                                           regular games\n",
+    "                                           lists. Each list contains the number of wins and total games played, \n",
+    "                                           where the first list represents back to back games and the second list \n",
+    "                                           represents regular games\n",
     "    \"\"\"\n",
     "    # Index out the seasons \n",
     "    newLog = game_log[game_log[\"season_id\"] >= season_id]\n",
@@ -1327,15 +1330,21 @@
     "                          win loss percentage for back to back games given the inputted data.\n",
     "    \"\"\"\n",
     "    # Get number of back to back and reg games \n",
-    "    nBB = len(bbList)\n",
-    "    nReg = len(regList)\n",
-    "    xbarDiff = np.mean(regList) - np.mean(bbList)\n",
-    "    pooledSE = np.sqrt(((np.std(bbList))**2 / float(nBB)) + ((np.std(regList))**2 / float(nReg)))\n",
-    "    tVal = xbarDiff / float(pooledSE)\n",
-    "    df = (nBB - 1) + (nReg - 1)\n",
+    "    bbWins = bbList[0]\n",
+    "    nBB = bbList[1]\n",
+    "    regWins = regList[0]\n",
+    "    nReg = regList[1]\n",
+    "    # Get our win loss percentages for back to back and regular games \n",
+    "    bbProp = bbWins / float(nBB)\n",
+    "    regProp = regWins / float(nReg)\n",
+    "    # Caluclate the pooled proportion and pooled standard deviation \n",
+    "    pooledProp = (bbWins + regWins) / float(nBB + nReg)\n",
+    "    pooledSE = np.sqrt(pooledProp * (1 - pooledProp) * ((1/float(nBB)) + (1/float(nReg))))\n",
+    "    propDiff = regProp - bbProp\n",
+    "    z = propDiff / float(pooledSE)\n",
     "    # Find the cutoff for alpha = 0.05 \n",
-    "    cutoff = t.ppf(0.95, df, loc=0, scale=1)\n",
-    "    return t > cutoff \n",
+    "    cutoff = norm.ppf(0.95, loc = 0, scale = 1)\n",
+    "    return z > cutoff \n",
     "    \n",
     "def testLeague(game_log, season_id):\n",
     "    \"\"\" For all teams in the league, run the hypothesis tests comparing win loss percentages between back to back games\n",
@@ -1344,8 +1353,10 @@
     "        game_log (pd.Dataframe): Dataframe containing all the game logs (all games, not just home)\n",
     "        season_id (string): season id in which we only look at the results occuring at or after this season  \n",
     "    Output:\n",
-    "        result: (Dictionary) where the key is the team_id, and the value is a boolean of whether or not there\n",
-    "                             was a significant difference between the records\n",
+    "        result: (Float, Dictionary) Tuple containing an int and a dictionary. The float represents the percentage of teams\n",
+    "                                    in which back to back games is significant from the hypothesis test. The dictionary \n",
+    "                                    has keys being the team_id, and values as booleans of whether or not there was a \n",
+    "                                    significant difference between the records\n",
     "    \"\"\"\n",
     "    # Index out the seasons \n",
     "    newLog = game_log[game_log[\"season_id\"] >= season_id]\n",
@@ -1361,10 +1372,58 @@
     "        if returnDict[team] == 1:\n",
     "            sig += 1\n",
     "        total += 1\n",
-    "    print (sig) / float(total)\n",
-    "    return returnDict \n",
+    "    percSig = (sig) / float(total)\n",
+    "    print percSig\n",
+    "    return (percSig, returnDict)\n",
+    "\n",
+    "#testLeague(home_games, \"22004\")\n",
+    "testLeague(home_games, \"22005\")\n",
+    "#testLeague(home_games, \"22006\")\n",
+    "#testLeague(home_games, \"22007\")\n",
+    "#testLeague(home_games, \"22008\")\n",
+    "#testLeague(home_games, \"22009\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualizing the Results\n",
+    "Below, we run hypothesis tests on cutoff seasons starting from 2004, all the way up to 2015. We graphically display this result. This graph seems to show that as there are more and more seasons, it appears that playing back to back games is less significant compared to playing regular games. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Use the following imports \n",
+    "from bokeh.plotting import figure, output_file, show\n",
+    "from bokeh.io import output_notebook\n",
+    "from bokeh.charts import Bar\n",
+    "\n",
+    "# Initialize the results of running the hypothesis test above on many seasons\n",
+    "resultsList = []\n",
+    "seasons = [\"22004\", \"22005\", \"22006\", \"22007\", \"22008\", \"22009\", \"22010\", \"22011\", \"22012\", \"22013\", \"22014\", \"22015\"]\n",
+    "# More readable list for the plot values \n",
+    "readSeasons = [\"2004\", \"2005\", \"2006\", \"2007\", \"2008\", \"2009\", \"2010\", \"2011\", \"2012\", \"2013\", \"2014\", \"2015\"]\n",
+    "# Compute the proportion of teams in which playing back to back was significant for \n",
+    "# on passing in seasons from 2004 to 2015\n",
+    "for season in seasons:\n",
+    "    resultsList.append(testLeague(home_games, season)[0])\n",
     "    \n",
-    "testLeague(home_games, \"22005\")"
+    "# Create a new plot with a title and axis labels\n",
+    "p = figure(title=\"Hypothesis Testing Over Cutoffs From 2004-2015\", x_axis_label='Season Cutoff', y_axis_label='% of Teams Back to Back Significant')\n",
+    "\n",
+    "# Add the line to the plot, specifying features of the graph \n",
+    "p.line(readSeasons, resultsList, legend=\"% of Teams In Which Back to Back Significant\", line_width=2)\n",
+    "\n",
+    "# Display inline\n",
+    "output_notebook()\n",
+    "show(p)"
    ]
   },
   {
@@ -1372,7 +1431,7 @@
    "metadata": {},
    "source": [
     "# Result\n",
-    "The above code ran the hypothesis test comparing win loss percentages between regular and back to back games across all teams in the league from the 2005 - 2016 season so far. As the results show, for an alpha level of 0.05, we see that there is statistically significant evidence to reject the null in favor of the alternative that teams have a worse record on back to back games compared to regular games, for all teams since the 2005 season."
+    "The above code ran the hypothesis test comparing win loss percentages between regular and back to back games across all teams in the league from the 2005 - 2016 season so far. As the results show, for an alpha level of 0.05, we see that there is statistically significant evidence to reject the null in favor of the alternative that teams have a worse record on back to back games compared to regular games, for 53% of teams since the 2005 season."
    ]
   },
   {
