--- a/Midterm_Report.ipynb
+++ b/Midterm_Report.ipynb
@@ -344,7 +344,7 @@
     "# TEST SET WILL BE SEASON 2015-16 + 2016-17??\n",
     "# WHAT SHOULD TRAINING SET AND VALIDATION SET BE?\n",
     "\n",
-    "print generate_year_list(start_year,length)\n",
+    "#print generate_year_list(start_year,length)\n",
     "load_all_gamelogs(conn, start_year, length )"
    ]
   },
@@ -439,9 +439,11 @@
     "    opp_team_id = np.zeros(len(league_df), dtype=np.int64)\n",
     "    wl_binary = np.zeros(len(league_df), dtype = np.int64)\n",
     "    \n",
+    "    \n",
     "    league_df = league_df.assign(is_home = is_home)\n",
     "    league_df = league_df.assign(opp_team_id = opp_team_id)\n",
     "    league_df = league_df.assign(wl_binary = wl_binary)\n",
+    "    \n",
     "    \n",
     "    # add home indicator variable\n",
     "    for (index, row) in league_df.iterrows():\n",
@@ -477,22 +479,10 @@
     "            league_df.set_value(index, 'wl_binary', 1)\n",
     "        else:\n",
     "            league_df.set_value(index, 'wl_binary', 0)\n",
-    "            \n",
+    "    \n",
     "    return league_df\n",
     "league_df = preprocess(league_df)\n",
     "league_df.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "new_df1 = league_df.sort_values('game_date')\n",
-    "new_df1[new_df1[\"team_abbreviation\"] == \"DAL\"].head()"
    ]
   },
   {
@@ -752,6 +742,7 @@
     "all_games = new_df\n",
     "home_games = new_df[new_df['is_home'] == 1]\n",
     "home_games_with_cutoff = home_games[home_games['home_game_count'] >= cutoff]\n",
+    "print len(home_games_with_cutoff)\n",
     "print home_games_with_cutoff.head(20)\n",
     "#print home_games_with_cutoff[\"home_win_pct_as_home\"]\n",
     "#pd.DataFrame.to_csv(home_games_with_cutoff, 'home_games_with_cutoff.csv')\n",
@@ -882,6 +873,71 @@
     "\n",
     "#new_df.head()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "temp_df = home_games_with_cutoff[home_games_with_cutoff['season_id']>=\"22005\"]\n",
+    "temp_df.head()\n",
+    "altitude = {'Chicago Stags': 615, 'Buffalo Braves': 600, 'Washington Bullets': 400, 'Toronto Huskies': 249, \n",
+    "            'Los Angeles Lakers': 233, 'Chicago Bulls': 615, 'Washington Capitols': 200, 'Providence Steamrollers': 75, \n",
+    "            'Charlotte Bobcats': 751, 'Capital Bullets': 200, 'New Orleans Pelicans': 13, 'San Diego Rockets': 62, \n",
+    "            'Milwaukee Hawks': 617, 'Philadelphia 76ers': 39, 'Philadelphia Warriors': 39, 'Chicago Packers': 615, \n",
+    "            'New Orleans Jazz': 20, 'Detroit Pistons': 961, 'Boston Celtics': 141, 'Miami Heat': 24, \n",
+    "            'Minneapolis Lakers': 830, 'Orlando Magic': 82, 'Portland Trail Blazers': 50, 'Rochester Royals': 505, \n",
+    "            'Golden State Warriors': 43, 'Sheboygan Redskins': 630, 'New York Knicks': 33, 'St. Louis Hawks': 465, \n",
+    "            'Indianapolis Olympians': 715, 'Washington Wizards': 205, 'Kansas City Kings': 910, 'Utah Jazz': 4226, \n",
+    "            'Ft. Wayne Zollner Pistons': 600, 'Pittsburgh Ironmen': 1365, 'New Jersey Nets': 33, 'New York Nets': 33, \n",
+    "            'Dallas Mavericks': 430, 'Sacramento Kings': 30, 'New Orleans/Oklahoma City Hornets': 20, \n",
+    "            'Los Angeles Clippers': 305, 'San Antonio Spurs': 650, 'Vancouver Grizzlies': 171, \n",
+    "            'Oklahoma City Thunder': 1201, 'Waterloo Hawks': 1079, 'Charlotte Hornets': 751, 'Anderson Packers': 879, \n",
+    "            'Syracuse Nationals': 380, 'Kansas City-Omaha Kings': 910, 'Cincinnati Royals': 482, 'Cleveland Rebels': 653, \n",
+    "            'Milwaukee Bucks': 617, 'Phoenix Suns': 39, 'LA Clippers': 305, 'Memphis Grizzlies': 337, \n",
+    "            'Tri-Cities Blackhawks': 1050, 'Toronto Raptors': 249, 'Houston Rockets': 43, 'New Orleans Hornets': 13, \n",
+    "            'Chicago Zephyrs': 594, 'Minnesota Timberwolves': 830, 'Detroit Falcons': 600, 'Indiana Pacers': 715, \n",
+    "            'San Diego Clippers': 62, 'Seattle SuperSonics': 518, 'Cleveland Cavaliers': 653, 'Atlanta Hawks': 1050, \n",
+    "            'Brooklyn Nets': 33, 'Indianapolis Jets': 715, 'Baltimore Bullets': 480, 'San Francisco Warriors': 52, \n",
+    "            'St. Louis Bombers': 465, 'Denver Nuggets': 5280}\n",
+    "altitude_dict = {}\n",
+    "curr_names = temp_df[\"team_name\"].tolist()\n",
+    "for key in altitude:\n",
+    "    if key not in curr_names:\n",
+    "        continue\n",
+    "    else:\n",
+    "        filtered_df = temp_df[temp_df['team_name'] == key]\n",
+    "        cor_id = filtered_df[\"team_id\"].iloc[0]\n",
+    "        altitude_dict[str(cor_id)] = altitude[key]\n",
+    "print altitude_dict\n",
+    "### adding a new elevation column\n",
+    "elevation = np.zeros(len(temp_df), dtype = np.int64)\n",
+    "temp_df = temp_df.assign(elevation = elevation)\n",
+    "\n",
+    "for (index, row) in temp_df.iterrows():\n",
+    "        location = row['is_home']\n",
+    "        if location == 1: # at home\n",
+    "            alt = altitude_dict[str(row[\"team_id\"])]\n",
+    "            temp_df.set_value(index, 'elevation', alt)\n",
+    "        else:\n",
+    "            alt = altitude_dict[str(row[\"opp_team_id\"])]\n",
+    "            temp_df.set_value(index, 'elevation', alt)\n",
+    "temp_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "pd.DataFrame.to_csv(temp_df, 'home_games_with_cutoff_elev.csv')"
    ]
   },
   {
