combined elevation and mileage

--- a/Midterm_Report.ipynb
+++ b/Midterm_Report.ipynb
@@ -1035,8 +1035,8 @@
     "#print len(home_games_with_cutoff[home_games_with_cutoff['season_id'] == '22015'])\n",
     "\n",
     "\n",
-    "#new_years_df = league_df[league_df['season_id'] >= \"22005\"]\n",
-    "#new_years_df = add_extra_features(new_years_df, True)\n",
+    "new_years_df = league_df[league_df['season_id'] >= \"22005\"]\n",
+    "new_years_df = add_extra_features(new_years_df, True)\n",
     "\n",
     "new_years_df.head(30)\n"
    ]
@@ -1175,7 +1175,9 @@
    },
    "outputs": [],
    "source": [
-    "temp_df = home_games_with_cutoff[home_games_with_cutoff['season_id']>=\"22005\"]\n",
+    "#temp_df = home_games_with_cutoff[home_games_with_cutoff['season_id']>=\"22005\"]\n",
+    "temp_df = new_years_df[new_years_df['is_home'] == 1]\n",
+    "\n",
     "temp_df.head()\n",
     "altitude = {'Chicago Stags': 615, 'Buffalo Braves': 600, 'Washington Bullets': 400, 'Toronto Huskies': 249, \n",
     "            'Los Angeles Lakers': 233, 'Chicago Bulls': 615, 'Washington Capitols': 200, 'Providence Steamrollers': 75, \n",
@@ -1229,7 +1231,8 @@
    },
    "outputs": [],
    "source": [
-    "pd.DataFrame.to_csv(temp_df, 'home_games_with_cutoff_elev.csv')"
+    "#pd.DataFrame.to_csv(temp_df, 'home_games_with_cutoff_elev.csv')\n",
+    "pd.DataFrame.to_csv(temp_df, 'home_games_with_cutoff_elev_mileage_2005.csv')"
    ]
   },
   {
@@ -1950,14 +1953,7 @@
     "\n",
     "print vincenty((lat1,long1), (lat2,long2)).miles\n",
     "    \n",
-    "#print Geocoder.geocode(location).valid_address\n",
-    "\n",
-    "\n",
-    "    \n",
-    "\n",
-    "        \n",
-    "    \n",
-    "\n"
+    "#print Geocoder.geocode(location).valid_address\n"
    ]
   },
   {
